--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
-  "latest": "RRMudflapsPrices_2026-01-19_07-14-56.json",
+  "latest": "RRMudflapsPrices_2026-01-19_18-51-04.json",
   "all": [
+    "RRMudflapsPrices_2026-01-19_18-51-04.json",
     "RRMudflapsPrices_2026-01-19_07-14-56.json",
     "RRMudflapsPrices_2026-01-18_17-34-46.json",
     "RRMudflapsPrices_2026-01-18_14-50-12.json"
