--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "latest_master_csv": "master_price_data.csv",
-  "latest_historical_csv": "historical/20260209_025524_master_price_data.csv",
-  "last_updated": "2026-02-09T02:55:24.709632",
-  "timestamp": "20260209_025524",
+  "latest_historical_csv": "historical/20260209_232045_master_price_data.csv",
+  "last_updated": "2026-02-09T23:20:46.187005",
+  "timestamp": "20260209_232045",
   "historical_files": [
     "historical/20260207_190747_master_price_data.csv",
     "historical/20260206_155210_master_price_data.csv",
@@ -14,6 +14,19 @@
     "historical/20260209_021059_master_price_data.csv",
     "historical/20260209_021320_master_price_data.csv",
     "historical/20260209_025404_master_price_data.csv",
-    "historical/20260209_025524_master_price_data.csv"
+    "historical/20260209_025524_master_price_data.csv",
+    "historical/20260209_035204_master_price_data.csv",
+    "historical/20260209_043513_master_price_data.csv",
+    "historical/20260209_055702_master_price_data.csv",
+    "historical/20260209_074211_master_price_data.csv",
+    "historical/20260209_092730_master_price_data.csv",
+    "historical/20260209_111324_master_price_data.csv",
+    "historical/20260209_125844_master_price_data.csv",
+    "historical/20260209_144459_master_price_data.csv",
+    "historical/20260209_163124_master_price_data.csv",
+    "historical/20260209_181725_master_price_data.csv",
+    "historical/20260209_195828_master_price_data.csv",
+    "historical/20260209_213933_master_price_data.csv",
+    "historical/20260209_232045_master_price_data.csv"
   ]
 }
